tests/machine/x/ocaml/save_jsonl_stdout.error
stage: compile
error:
File "/workspace/mochi/tests/machine/x/ocaml/save_jsonl_stdout.ml", line 4, characters 70-76:
4 |     let parts = List.map (fun (k,v) -> Printf.sprintf "\"%s\": %s" k (__show (Obj.obj v))) m in
                                                                          ^^^^^^
Error: Unbound value __show


Context (around line 4):
   2 |   let oc = if path = "-" then stdout else open_out path in
   3 |   List.iter (fun m ->
   4 |     let parts = List.map (fun (k,v) -> Printf.sprintf "\"%s\": %s" k (__show (Obj.obj v))) m in
   5 |     output_string oc ("{" ^ String.concat ", " parts ^ "}\n")
   6 |   ) rows;
